--- a/config/database.yml
+++ b/config/database.yml
@@ -3,15 +3,11 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-if development?
-  set :database, {
-    adapter: "sqlite3",
-    database: "db/db.sqlite3"
-  }
-else
-  set :database, ENV['DATABASE_URL']
-end
-
+development:
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
