--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,9 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: d7pssll3ijt095
   pool: 5
   timeout: 5000
+  username: gektupfsjkomjw
+  password: UxgIbY5okwoCSHqmLTo3gElsu
